layout bugs fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,28 +9,22 @@
 }
 
 header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 40px;
     background: black;
 }
 
 header h1 {
+    font-size: 45px;
     text-align: center;
     letter-spacing: 3px;
     color: white;
 }
 
-nav ul {
-    display: flex;
-    justify-content: space-around;
-}
-
-ul {
-    padding-inline-start: 0;
-}
-
 li {
-    display: flex;
-    margin-top: 15px;
+    margin-top: 20px;
 }
 
 nav {
@@ -68,40 +62,17 @@ body {
     text-align: justify;
 }
 
-.about-content p {
-    padding: 10px 60px 10px 60px;
-}
-
-.about-me, .work, .contact {
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
-}
-
 .about-me h2, .work h2, .contact h2 {
     font-size: 35px;
 }
 
 .content {
-    display: flex;
-    width: 100%;
     text-align: justify;
 }
 
-.content p, .content ul {
-    padding: 10px 60px 10px 60px;
+.about-content p, .content p {
+    padding: 10px 20px 10px 20px;
 }
-
-.contact ul {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-}
-
-.contact li {
-    margin-left: 20px;
-}
-
 .phone-number, .email {
     margin-right: 5px;
 }
@@ -124,6 +95,7 @@ body {
 
     nav ul {
         justify-content: center;
+        align-items: baseline;
     }
 
     nav a {
@@ -140,8 +112,7 @@ body {
         justify-content: flex-end; 
         width: 20%;
         padding-right: 2%;
-        font-size: 35px;
-        margin-left: 2px;
+        font-size: 35px
     }
 
     .about-content p {
